@@ -21,7 +21,12 @@
 
 // Fast FPS display. FPS are updated 10 times per second without consuming resources
 // uncomment this line to use the old method that updated
-#define FAST_FPS_DISPLAY 1
+// You need to add the "fps_images.png" file to your project
+#define DIRECTOR_DISPLAY_FAST_FPS 1
+
+// If you want a Fast Director that dispatches the events more frequently, leave the following line uncommented
+// This value has no effect if you use the "normal" director
+#define DIRECTOR_FASTDIRECTOR_FAST_EVENTS 1
 
 /** Possible Pixel Formats for the EAGLView */
 typedef enum {
@@ -77,7 +82,7 @@ and when to execute the Scenes
 	int frames;
 	ccTime accumDt;
 	ccTime frameRate;
-#ifdef FAST_FPS_DISPLAY
+#ifdef DIRECTOR_DISPLAY_FAST_FPS
 	LabelAtlas *FPSLabel;
 #endif
 	
@@ -122,8 +127,11 @@ and when to execute the Scenes
 /** returns a shared instance of the director */
 +(Director *)sharedDirector;
 /** Uses a Director that triggers the main loop as fast as it can.
- * Although it is faster, it will consume more battery
  * To use it, it must be called before calling any director function
+ * Features and Limitations:
+ *  - Faster than "normal" director
+ *  - Consumes more battery than the "normal" director
+ *  - It has some issues while using UIKit objects
  */
 +(void) useFastDirector;
  
@@ -247,7 +255,11 @@ and when to execute the Scenes
 @end
 
 /** FastDirector is a Director that triggers the main loop as fast as possible.
- * In some circumstances it is faster than the normal Director.
+ *
+ * Features and Limitations:
+ *  - Faster than "normal" director
+ *  - Consumes more battery than the "normal" director
+ *  - It has some issues while using UIKit objects
  */
 @interface FastDirector : Director
 {
@@ -255,6 +267,7 @@ and when to execute the Scenes
 	
 	NSAutoreleasePool	*autoreleasePool;
 }
+-(void) preMainLoop;
 @end
 
 
